--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
  
 		<h2>Writer. Wanderer. Rebel. Romantic. Dreamer. Inventor.</h2>
 
-                    <p class="lead">Yeah.  I'm that girl that your mother warned you about.... 
+                    <p class="lead">Yeah.  I'm the girl that your mother warned you about.... 
 			<!--a target="_blank" href="http://join.deathtothestockphoto.com/"-->
 				
 			<!--/a-->
