--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/Home/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/Home/stylish-portfolio.css" rel="stylesheet">
 
 
     <!-- Custom Fonts -->
