--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 
 					<p>Chasing down the most unique TV and movie memorabilia.</p>
 
-                                	<a href="regan.github.io/Memorabilia" class="btn btn-light">Check It Out!</a>
+                                	<a href="Memorabilia" class="btn btn-light">Check It Out!</a>
 
 	                        </div>
                         
