Tidying Up Memorabilia Page - Adding Titles and SubTitles

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 	<hr class="small">
                     
 	<p class="text-muted">
-	Copyright &copy; Your Website 2014
+	Copyright &copy; Jen Regan 2015
 	</p>
                 
 	</div>
