--- a/Memorabilia.html
+++ b/Memorabilia.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jen Regan Movie and TV Memorabilia</title>
+    <title>Jen Regan - My Collections</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/Passions/bootstrap.min.css" rel="stylesheet">
@@ -39,13 +39,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Jen Regan</a>
+                <a class="navbar-brand" href="index">Jen Regan</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="index">Home</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Movie and TV Memorabili
+                <h1 class="page-header">Movie and TV Memorabilia
                     <small>My Collections</small>
                 </h1>
             </div>
