Cleanup Folder Structure For Images

--- a/Memorabilia.html
+++ b/Memorabilia.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="img/Harry-Potter.jpg" alt="">
+                    <img class="img-responsive" src="img/MovieTV/Harry Potter/Harry-Potter.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="img/The-Hunger-Games.jpg" alt="">
+                    <img class="img-responsive" src="img/MovieTV/Hunger Games/The-Hunger-Games.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="img/Alias.jpg" alt="">
+                    <img class="img-responsive" src="img/MovieTV/Alias/Alias.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -126,7 +126,7 @@
 
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="img/once-upon-a-time.jpg" alt="">
+                    <img class="img-responsive" src="img/MovieTV/Once Upon A Time/once-upon-a-time.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
